--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -35,6 +35,7 @@
 
 
 <!--Header part-->
+ {% if username %}
 <div class="big">
 <p class="pulsate">Select server...</p>
 {% for k,i in servers %}
@@ -54,9 +55,31 @@
        </ul>
  </div>
 {% endfor %}
-
-
 </div>
+
+ {% else %}
+
+     <div class="big">
+<p class="pulsate">Select server...</p>
+{% for k,i in servers %}
+ <div class="panel">
+       <button class="accordion">{{ i }}</button>
+       <ul class="inside">
+              <li><a target="_blank" style="color:red;font-size: 14px;text-decoration: underline;" href="http://{{ i }}">http://{{ i }}</a></li>
+              {% for j in latest %}
+                  {% if j.web == i %}
+                      {% if j.status %}
+                       <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled="true" checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a></li>
+                               {% else %}
+                       <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled="true" onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a><br></li>
+                       {% endif %}
+                 {% endif %}
+              {% endfor %}
+       </ul>
+ </div>
+{% endfor %}
+</div>
+  {% endif %}
 <br>
 <!--Footer part -->
 <div class="footer">
