added new frontend logic

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-{{ ssids_busy }}
 <!--Login part-->
  <div id="header">
   <div class="login_form">
@@ -47,9 +46,9 @@
                   {% if j.web == i %}
                       {% if j.name in ssids_busy %}
                           {% if j.status %}
-                           <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a></li>
+                           <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }} Busy </span></a></li>
                            {% else %}
-                           <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a><br></li>
+                           <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }} Busy </span></a><br></li>
                           {% endif %}
                       {% else %}
                           {% if j.status %}
