--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -174,11 +174,13 @@ ssid_error=[]
 //Check if ssid is busy
 $(document).ready(function(){
     c={{ ssids_busy }}
+    if (c){
     console.log(c,type(c))
     check_busy =  setInterval( function(){
                $.get("/ssid_busy/", function(data) {
                    console.log('Check busy is working')
                    data=data.ssid_busy_list
+                   if (data.length > null){
                    for (var i=0,n=c.length;i<n;i++) {
                         if (!data.includes(c[i])) {
                         $( "span."+data[i] ).html(data[i]+"<span style='color:blue'>  ok  </span>").fadeIn("slow");
@@ -188,7 +190,9 @@ $(document).ready(function(){
                         $( "span."+data[i] ).html(data[i]+"<span style='color:red'>  Busy  </span>").fadeIn("slow");
                         }   */
                    }
-                   },1000)})
+                   }
+                   else {console.log('There is no busy ssids now!')}
+               },1000)})}})
 
 
 //update ssid_list
