--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -175,7 +175,7 @@ ssid_error=[]
 $(document).ready(function(){
     c={{ ssids_busy }}
     if (c){
-    console.log(c,type(c))
+    console.log(c,typeof(c))
     check_busy =  setInterval( function(){
                $.get("/ssid_busy/", function(data) {
                    console.log('Check busy is working')
