--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -174,7 +174,7 @@ ssid_error=[]
 //Check if ssid is busy
 $(document).ready(function(){
     c={{ ssids_busy }}
-    console.log(c,typeof(c))
+    console.log(c,typeof(c)) })
 /*    if (c){
     check_busy =  setInterval( function(){
                $.get("/ssid_busy/", function(data) {
