--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -176,7 +176,8 @@ $(document).ready(function(){
     {% autoescape off %}
     c={{ ssids_busy }}
     {% endautoescape %}
-    console.log(c,typeof(c),c.length) })
+  if (c){
+    console.log(c,typeof(c),c.length) }})
 /*    if (c){
     check_busy =  setInterval( function(){
                $.get("/ssid_busy/", function(data) {
