--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -176,7 +176,7 @@ $(document).ready(function(){
     {% autoescape off %}
     c={{ ssids_busy }}
     {% endautoescape %}
-  if (c){
+  if (c.length > null){
     console.log(c,typeof(c),c.length) }})
 /*    if (c){
     check_busy =  setInterval( function(){
