--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -177,8 +177,7 @@ $(document).ready(function(){
     c={{ ssids_busy }}
     {% endautoescape %}
   if (c.length > null){
-    console.log(c,typeof(c),c.length) }})
-/*    if (c){
+    console.log(c,typeof(c),c.length)
     check_busy =  setInterval( function(){
                $.get("/ssid_busy/", function(data) {
                    console.log('Check busy is working')
@@ -195,7 +194,7 @@ $(document).ready(function(){
                    }
                    }
                    else {console.log('There is no busy ssids now!')}
-               },1000)})}})   */
+               },1000)})}})
 
 
 //update ssid_list
