--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -181,7 +181,10 @@ $(document).ready(function(){
     check_busy =  setInterval( function(){
                $.get("/ssid_busy/", function(data) {
                    console.log('Check busy is working')
-                   data=data.ssid_busy_list
+                   data = data.ssid_busy_list
+                   console.log(data, typeof(data), data.length)
+                   })},1000)
+      /*
                    if (data.length > null){
                    for (var i=0,n=c.length;i<n;i++) {
                         if (!data.includes(c[i])) {
@@ -194,7 +197,7 @@ $(document).ready(function(){
                    }
                    }
                    else {console.log('There is no busy ssids now!')}
-               },1000)})}})
+               },1000)})}})   */
 
 
 //update ssid_list
