--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -187,7 +187,7 @@ $(document).ready(function(){
                    for (var i=0,n=c.length;i<n;i++) {
                         if (!data.includes(c[i])) {
                         $( "span."+data[i] ).html(data[i]+"<span style='color:blue'>  ok  </span>").fadeIn("slow");
-                        //$('#'+data[i]).prop("disabled", false);
+                        $('#'+data[i]).prop("disabled", false);
                         console.log('Changed status '+c[i])
                         }
                        //else {
