added new frontend logic

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -184,8 +184,9 @@ $(document).ready(function(){
                    data = data.ssid_busy_list
                    //console.log(data, typeof(data), data.length)
                    if (data.length === 0){
-                   for (var i=0,n=c.length;i<n;i++) {
-                       $('#'+c[i]).prop("disabled", false);
+                   location.reload()
+                   //for (var i=0,n=c.length;i<n;i++) {
+                   //    $('#'+c[i]).prop("disabled", false);
                        //if (!data.includes(c[i])) {
                         //$( "span."+data[i] ).html(data[i]+"<span style='color:blue'>  ok  </span>").fadeIn("slow");
                         //$('#'+c[i]).prop("disabled", false);
@@ -195,7 +196,7 @@ $(document).ready(function(){
                        // $( "span."+data[i] ).html(data[i]+"<span style='color:red'>  Busy  </span>").fadeIn("slow");
                        // }
                    }
-                   console.log('Ready')}
+                   //console.log('Ready')}
                    //else {console.log('There is no busy ssids now!')}
                })},1000)}})
 
