--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -114,10 +114,10 @@ for (i = 0; i < acc.length; i++) {
     acc[i].onclick = function(){
         this.classList.toggle("active");
         var panel = this.nextElementSibling;
-        if (panel.style.display === "block") {
+        if (panel.style.display === "inline-block") {
             panel.style.display = "none";
         } else {
-            panel.style.display = "block";
+            panel.style.display = "inline-block";
         }
     }
 }
