--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -43,7 +43,7 @@
        {% if i in servers_with_up_ssids %}
        <button class="accordion active">{{ i }}</button>
        {% else %}
-       <button class="accordion inactive">{{ i }}</button>
+       <button class="accordion">{{ i }}</button>
        {% endif %}
        <ul class="inside">
               <li><a target="_blank" style="color:red;font-size: 14px;text-decoration: underline;" href="http://{{ i }}">http://{{ i }}</a></li>
