--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -6,6 +6,7 @@ button.accordion {
     border-bottom: 1px solid darkgrey;
     cursor: pointer;
     padding: 18px;
+    color:#444;
     width: 250px;
     outline: none;
     font-size: 18px;
@@ -18,12 +19,8 @@ button.accordion.active, button.accordion:hover {
     background-color: #ddd;
 }
 
-.inactive {
-    color:#444;
-}
-
 .active {
-    color:lightgreen;
+    background-color: #ddd;
 }
 
 .panel {
