--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -38,7 +38,9 @@
  {% if username %}
 <div class="big">
 <p class="pulsate">Select server...</p>
-{% for k,i in servers %}
+{% for i in servers %}
+Servers with up ssids:{{ servers_with_up_ssids }}
+i:
  <div class="panel">
        {% if i in servers_with_up_ssids %}
        <button class="accordion active">{{ i }}</button>
