--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -19,9 +19,27 @@ button.accordion.active, button.accordion:hover {
     background-color: #ddd;
 }
 
+/* Server with active ssid pulsation */
 .active {
-    background-color: #ddd;
+    -webkit-animation: pulsate 5s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    opacity: 0.1;
+    background-color:ghostwhite;
+    font-size: 2em;
+    font-weight: bold;
 }
+@-webkit-keyframes active {
+    0% {
+        opacity: 0.5;
+    }
+    50% {
+        opacity: 1.0;
+    }
+    100% {
+        opacity: 0.5;
+    }
+}
+
 
 .panel {
     background-color: white;
