Added color to server button with active ssids

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -21,7 +21,7 @@ button.accordion.active, button.accordion:hover {
 
 /* Server with active ssid pulsation */
 .active {
-    background-color:ghostwhite;
+    background-color:navajowhite;
 }
 
 
