--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -76,9 +76,9 @@
 {% for i in servers %}
  <div class="panel">
   {% if i in servers_with_up_ssids %}
-       <button class="accordion active">{{ i }}</button>
+       <button class="accordion act">{{ i }}</button>
        {% else %}
-       <button class="accordion passive">{{ i }}</button>
+       <button class="accordion pasv">{{ i }}</button>
        {% endif %}
        <ul class="inside">
               <li><a target="_blank" style="color:red;font-size: 14px;text-decoration: underline;" href="http://{{ i }}">http://{{ i }}</a></li>
