--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -20,7 +20,7 @@ button.accordion.active, button.accordion:hover {
 
 /* Server with active ssid pulsation */
 .act {
-    background-color:ghostwhite;
+    background-color:lightgray;
 }
 
 .pasv {
