--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -11,11 +11,12 @@ button.accordion {
     font-size: 18px;
     transition: 0.4s;
     border-radius: 15px;
-    margin-bottom: 2px;
+    margin-bottom: 7px;
 }
 
 button.accordion.active, button.accordion:hover {
     background-color: #ddd;
+    color:white;
 }
 
 .act {
