Added color to server button with active ssids

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -16,7 +16,7 @@ button.accordion {
 
 button.accordion.active, button.accordion:hover {
     background-color: #ddd;
-    color:white;
+    color:red;
 }
 
 .act {
@@ -36,6 +36,7 @@ ul.inside {
     list-style-type: none;
     padding-left: 35px;
     text-align: left;
+    margin-top:-5px;
 }
 
 
