Added new database

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -201,7 +201,7 @@ $(document).ready(function(){
                    if (data.length === 0){
                        console.log('All SSIDs are free')
                        clearInterval(check_busy)
-                       location.reload()
+                       //location.reload()
                    }
                    //for (var i=0,n=c.length;i<n;i++) {
                    //    $('#'+c[i]).prop("disabled", false);
