--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -44,6 +44,9 @@ ul.inside {
     width: 780px;
     margin-left: auto;
     margin-right: auto;
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+   -moz-column-count: 3; /* Firefox */
+   column-count: 3;
  }
 
 .footer {
@@ -74,6 +77,8 @@ ul.inside {
     color:black;
     font-size: 2em;
     font-weight: bold;
+    margin-right: auto;
+    margin-left: auto;
 }
 @-webkit-keyframes pulsate {
     0% {
