Added new database

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -36,7 +36,7 @@
 
 <!--Header part-->
  {% if username %}
-     <p class="pulsate">Select server...</p>
+     <div class="title"><p class="pulsate">Select server...</p></div>
     <div class="big">
 {% for i in servers %}
  <div class="panel">
