Added new database

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -70,9 +70,8 @@
 </div>
 
  {% else %}
-
+<div class="title"><p class="pulsate">Select server...</p></div>
      <div class="big">
-<p class="pulsate">Select server...</p>
 {% for i in servers %}
  <div class="panel">
   {% if i in servers_with_up_ssids %}
