Added new database

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -117,7 +117,7 @@
 
 
 function SelectAll(ssid_list) {
-    $('inside').find(':checkbox').not(':checked').prop("checked", True);
+    $('inside').find(':checkbox').not(':checked').prop("checked");
 }
 
 
