--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -8,7 +8,7 @@
     <link href="{% static 'bred.css' %}" rel="stylesheet" type="text/css" >
     <script src="{% static 'jquery-3.1.1.min.js'%}"></script>
  <!--   <script src="{% static 'main.js'%}"></script> -->
-   <meta http-equiv="refresh" content="120">
+   <!-- <meta http-equiv="refresh" content="120"> -->
 </head>
 
 <body>
