Added new database

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -120,9 +120,9 @@ function SelectAll(ssid_list) {
     if (ssid.checked) {
     $('ul').find(':checkbox').not(':checked').prop("checked");
 }
-else {
-    $('ul').find(':checkbox').(':checked').prop( "checked", false );
-    }
+//else {
+    //$('ul').find(':checkbox').(':checked').prop( "checked", false );
+    //}
 }
 
 
