--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -117,7 +117,7 @@
 
 
 function SelectAll(ssid_list) {
-    if (ssid.checked) {
+    if (ssid_list.checked) {
     $('ul').find(':checkbox').not(':checked').prop("checked");
 }
 //else {
