--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -118,11 +118,14 @@
 
 function SelectAll(ssid_list) {
     if (ssid_list.checked) {
-    $('ul').find(':checkbox').not(':checked').prop("checked");
+    //$('ul').find(':checkbox').not(':checked').prop("checked");
+    $('ul').find(':checkbox:not(checked)').prop('checked',true)
+
 }
-//else {
+else {
     //$('ul').find(':checkbox').(':checked').prop( "checked", false );
-    //}
+   $('ul').find(':checkbox:checked').prop('checked',false)
+    }
 }
 
 
