--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -236,6 +236,7 @@ $(document).ready(function(){
 //update ssid_list
     function update_ssidlist(ssid) {
     //$('span.'+ssid.id).animate({opacity: 1}, 700 );
+    console.log('Working')
     ip.push(ssid.name)
     if (ssid.checked) {
         if (!ssidlist.includes(ssid.id)) {
