--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -120,7 +120,7 @@ function SelectAll(ssid_list) {
     if (ssid_list.checked) {
     //$('ul').find(':checkbox').not(':checked').prop("checked");
     //$(ssid_list).find(':checkbox:not(checked)').prop('checked',true)
-    $(ssid_list).closest('.panel').find(':checkbox:not(checked)').prop('checked',true).click()
+    $(ssid_list).closest('.panel').find(':checkbox:not(checked)').click().prop('checked',true)
         console.log('UP_NEW: ',up_new,'DOWN NEW: ',down_new)
 
 }
