--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -44,9 +44,9 @@ ul.inside {
     width: 780px;
     margin-left: auto;
     margin-right: auto;
-    -webkit-column-count: 3; /* Chrome, Safari, Opera */
-   -moz-column-count: 3; /* Firefox */
-   column-count: 3;
+  /*  -webkit-column-count: 3; /* Chrome, Safari, Opera */
+/*   -moz-column-count: 3; /* Firefox */
+ /*  column-count: 3; */
  }
 
 .footer {
